# embedded-scheduler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plan.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake
include/rtos/: kernel.hpp  scheduler.hpp  stats.hpp  task.hpp  timer.hpp  watchdog.hpp
include/rtos/ipc/: message_queue.hpp
include/rtos/sync/: event_flags.hpp  mutex.hpp  semaphore.hpp
src/: event_flags.cpp  kernel.cpp  main.cpp  message_queue.cpp  mutex.cpp  scheduler.cpp  semaphore.cpp
tests/: CMakeLists.txt  test_event_flags.cpp  test_message_queue.cpp  test_mutex.cpp  test_round_robin.cpp  test_scheduler.cpp  test_semaphore.cpp  test_task.cpp  test_timer.cpp  test_watchdog.cpp
